Fixed checkout flow
