# api-documentation.json
@@ -148,6 +148,7 @@
             "in": "query",
             "schema": {
               "enum": [
+                "OrderPlaced",
                 "PendingPayment",
                 "PaymentProcessing",
                 "Confirmed",
@@ -6937,6 +6938,14 @@
             "type": "string",
             "nullable": true
           },
+          "whatsAppNumber": {
+            "type": "string",
+            "nullable": true
+          },
+          "linkedInUrl": {
+            "type": "string",
+            "nullable": true
+          },
           "updatedAtUtc": {
             "type": "string",
             "format": "date-time"
@@ -7216,8 +7225,9 @@
       "CheckoutRequest": {
         "type": "object",
         "properties": {
-          "shippingAddress": {
-            "$ref": "#/components/schemas/ShippingAddressDto"
+          "addressId": {
+            "type": "string",
+            "format": "uuid"
           },
           "paymentMethod": {
             "enum": [
@@ -7250,6 +7260,7 @@
           },
           "orderStatus": {
             "enum": [
+              "OrderPlaced",
               "PendingPayment",
               "PaymentProcessing",
               "Confirmed",
@@ -8119,6 +8130,7 @@
           },
           "status": {
             "enum": [
+              "OrderPlaced",
               "PendingPayment",
               "PaymentProcessing",
               "Confirmed",
@@ -8230,6 +8242,7 @@
           },
           "status": {
             "enum": [
+              "OrderPlaced",
               "PendingPayment",
               "PaymentProcessing",
               "Confirmed",
@@ -9024,6 +9037,25 @@
           },
           "auth": {
             "$ref": "#/components/schemas/PublicAuthSettingsDto"
+          },
+          "payment": {
+            "$ref": "#/components/schemas/PublicPaymentSettingsDto"
+          }
+        },
+        "additionalProperties": false
+      },
+      "PublicPaymentSettingsDto": {
+        "type": "object",
+        "properties": {
+          "razorpayEnabled": {
+            "type": "boolean"
+          },
+          "codEnabled": {
+            "type": "boolean"
+          },
+          "razorpayKeyId": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -10044,6 +10076,7 @@
         "properties": {
           "status": {
             "enum": [
+              "OrderPlaced",
               "PendingPayment",
               "PaymentProcessing",
               "Confirmed",
